--- a/styles.css
+++ b/styles.css
@@ -46,25 +46,38 @@ section {
   background-color:#2B2733;
   display:flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 
-#new-activity-heading {
+.body-headings {
   align-self:flex-start;
   margin-left:5%;
+  /* margin-top:4%; */
+  width:100%;
 }
 
 #form {
   background-color:#46424D;
-  width:90%;
-  height:80%;
+  width:95%;
+  height:90%;
   display:flex;
+  border-radius:7px;
+  box-shadow: 5px 10px #26222d;
   /* margin-left:20px; */
 }
 
 #past-activity-block {
- width:34%;
- height:100%;
- background-color:#2B2733;
+  width:34%;
+  height:100%;
+  background-color:#2B2733;
+  /* display:flex; */
+}
+.no-activities {
+  display:flex;
+  flex-direction:row;
+  justify-content:center;
+}
+#no-activity-paragraph {
+  margin-top:10%;
 }
