--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ section {
 }
 
 #new-activity-block {
-  width:65%;
+  width:65.75%;
   height:100%;
   background-color:#2B2733;
   display:flex;
@@ -103,9 +103,23 @@ section {
   border:white solid 1px;
   border-radius:3px;
   width:20%;
+  height:3.5em;
   display:flex;
-  flex-direction:row;
-  justify-content:space-around;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  font-size:1em;
+}
+
+buttons,
+img {
+  width:15%;
+  padding-bottom:.25em;
+}
+
+buttons,
+h4 {
+
 }
 
 #accomplish-input-column {
@@ -126,11 +140,14 @@ section {
 
 form,
 input {
+  height:3em;
   background-color:#46424D;
   border-bottom:solid 1px;
   border-top:none;
-  border-right:none; 
+  border-right:none;
   border-left:none;
+  font-size:1em;
+  padding-top:20px;
 }
 
 #start-activity-button {
