--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,9 @@ main {
   background-color:#46424D;
   width:95%;
   height:90%;
-  display:flex;
   border-radius:7px;
   box-shadow:5px 10px #26222d;
+  display:flex;
   flex-direction:column;
   justify-content:center;
   align-items:center;
@@ -83,7 +83,7 @@ main {
   margin-top:10%;
 }
 
-#form-alignment {
+.form-alignment {
   display:flex;
   flex-direction:column;
   justify-content:space-evenly;
@@ -175,8 +175,7 @@ img {
   width: 40%;
 }
 
-form,
-input {
+.form-input {
   height:3em;
   background-color:#46424D;
   border-bottom:solid 1px;
@@ -195,6 +194,39 @@ input {
   border:0px;
   background-color:white;
   color:#46424D;
+}
+
+.activity-timer {
+  width:30%;
+  height:100%;
+  margin:0px;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  font-size:1.75em;
+}
+
+#activity-timer > p {
+  margin-bottom:0px;
+}
+
+#activity-timer > #time-left {
+  font-size:4em;
+  margin-top:0px;
+}
+
+#activity-timer > button {
+  width:27vh;
+  height:27vh;
+  background-color:#46424D;
+  border-style: solid;
+  border-width: 4px;
+  color:#FFF;
+  border-radius:100%;
+  font-size: 1.3em;
+  margin-top:5vh;
+  margin-bottom:15vh;
 }
 
 .hidden {
