--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ img {
   display:flex;
   flex-direction:column;
 }
-.warning-div {
+.warning-p {
   color:#EFB7EC;
   display:flex;
   flex-direction:row;
@@ -123,7 +123,7 @@ img {
   margin-top:2%;
   font-size:1em;
 }
-.small-warning-div {
+.small-warning-p {
   color:#EFB7EC;
   display:flex;
   flex-direction:row;
