--- a/styles.css
+++ b/styles.css
@@ -60,15 +60,57 @@ main {
   width:34%;
   height:100%;
   background-color:#2B2733;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
 }
 .no-activity-card {
-  /* display:flex;
-  flex-direction:row;
-  justify-content:center; */
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
 }
 #no-activity-card {
   margin-top:10%;
 }
+
+.past-activity-cards {
+  width:90%;
+}
+
+.activity-card{
+  width:100%;
+  background-color:#46424D;
+  display:flex;
+  justify-content:space-between;
+  margin-bottom:5%;
+  border-radius:7px;
+  box-shadow:5px 10px #26222d;
+}
+
+.card-text {
+  margin-left:3%;
+}
+
+.card-exercise {
+
+}
+
+.card-time {
+
+}
+
+.card-description {
+
+}
+
+.activity-type-identifier {
+  margin-right:3%;
+  margin-top:3%;
+  height: 2em;
+  border-radius:10px;
+
+}
+
 .form-alignment {
   display:flex;
   flex-direction:column;
