--- a/styles.css
+++ b/styles.css
@@ -68,13 +68,17 @@ main {
   display:flex;
   flex-direction:column;
   justify-content:center;
+  align-items:center;
+  margin-top:2%;
 }
-#no-activity-card {
-  margin-top:10%;
+
+.no-activity-card > p {
+  margin-top:0px;
 }
 
 .past-activity-cards {
   width:90%;
+  overflow-y: auto;
 }
 
 .activity-card{
@@ -103,12 +107,25 @@ main {
 
 }
 
+.study {
+  border-color:#B3FD78;
+}
+
+.exercise {
+  border-color:#FD8078;
+}
+
+.meditate {
+  border-color:#C278FD;
+}
+
 .activity-type-identifier {
   margin-right:3%;
   margin-top:3%;
   height: 2em;
   border-radius:10px;
-
+  border-style:solid;
+  border-width:2px;
 }
 
 .form-alignment {
@@ -255,11 +272,12 @@ img {
 }
 
 .log-activity {
-}
-
-.activity-type-identifier {
+  height:2em;
+  width:50%;
+  border-radius:3px;
+  border:0px;
   background-color:white;
-  border:2px solid pink;
+  color:#46424D;
 }
 
 .hidden {
