--- a/styles.css
+++ b/styles.css
@@ -1,296 +1,292 @@
 * {
-  font-family:"montserrat";
-  color:white;
+  font-family: "montserrat";
+  color: white;
+  font-weight: 300;
 }
 
 header {
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background-color:#46424D;
-  color:white;
-  height:8%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #46424D;
+  color: white;
+  height: 8%;
 }
 
 body {
-  background-color:#46424D;
+  background-color: #46424D;
 }
 
 main {
-  display:flex;
-  justify-content:space-between;
-  width:100%;
-  height:92%;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 92%;
+}
+
+button {
+  cursor: pointer;
 }
 
 .body-blocks {
-  margin:0px;
+  margin: 0px;
 }
 
 .new-activity-block {
-  width:65.75%;
-  height:100%;
-  background-color:#2B2733;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
+  width: 65.75%;
+  height: 100%;
+  background-color: #2B2733;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .body-headings {
-  align-self:flex-start;
-  margin-left:5%;
-  width:100%;
+  align-self: flex-start;
+  margin-left: 5%;
+  width: 100%;
 }
 
 #form {
-  background-color:#46424D;
-  width:95%;
-  height:90%;
-  border-radius:7px;
-  box-shadow:5px 10px #26222d;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  flex-wrap:wrap;
+  background-color: #46424D;
+  width: 95%;
+  height: 90%;
+  border-radius: 7px;
+  box-shadow: 5px 10px #26222d;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .past-activity-block {
-  width:34%;
-  height:100%;
-  background-color:#2B2733;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
+  width: 34%;
+  height: 100%;
+  background-color: #2B2733;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .no-activity-card {
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  margin-top:2%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2%;
 }
 
 .no-activity-card > p {
-  margin-top:0px;
+  margin-top: 0px;
 }
 
 .past-activity-cards {
-  width:90%;
-  overflow-y:auto;
+  width: 90%;
+  overflow-y: auto;
 }
 
 .activity-card{
-  width:100%;
-  background-color:#46424D;
-  display:flex;
-  justify-content:space-between;
-  margin-bottom:5%;
-  border-radius:7px;
-  box-shadow:5px 10px #26222d;
+  width: 100%;
+  background-color: #46424D;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5%;
+  border-radius: 7px;
+  box-shadow: 5px 10px #26222d;
 }
 
 .card-text {
-  margin-left:3%;
-}
-
-.card-exercise {
-
-}
-
-.card-time {
-
-}
-
-.card-description {
-
+  margin-left: 3%;
 }
 
 .study {
-  border-color:#B3FD78;
+  background-color: #B3FD78;
+  border-color: #B3FD78;
 }
 
 .exercise {
-  border-color:#FD8078;
+  background-color: #FD8078;
+  border-color: #FD8078;
 }
 
 .meditate {
-  border-color:#C278FD;
+  background-color: #C278FD;
+  border-color: #C278FD;
 }
 
 .activity-type-identifier {
-  margin-right:3%;
-  margin-top:3%;
-  height:2em;
-  border-radius:10px;
-  border-style:solid;
-  border-width:2px;
+  margin-right: 3%;
+  margin-top: 3%;
+  height: 2em;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 2px;
 }
 
 .form-alignment {
-  display:flex;
-  flex-direction:column;
-  justify-content:space-evenly;
-  align-items:stretch;
-  height:90%;
-  width:80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: stretch;
+  height: 90%;
+  width: 80%;
 }
 
 #activity-buttons-row {
-  display:flex;
-  flex-direction:row;
-  justify-content:space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .activity-buttons {
-  background-color:#46424D;
-  border:white solid 1px;
-  border-radius:3px;
-  width:20%;
-  height:3.5em;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  font-size:1em;
+  background-color: #46424D;
+  border: white solid 1px;
+  border-radius: 3px;
+  width: 20%;
+  height: 3.5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1em;
 }
 
 .meditate-button-clicked {
-  border-color:#C278FD;
-  color:#C278FD;
+  border-color: #C278FD;
+  color: #C278FD;
 }
 
 .study-button-clicked {
-  border-color:#B3FD78;
-  color:#B3FD78;
+  border-color: #B3FD78;
+  color: #B3FD78;
 }
 
 .exercise-button-clicked {
-  border-color:#FD8078;
-  color:#FD8078;
+  border-color: #FD8078;
+  color: #FD8078;
 }
 
 buttons,
 img {
-  width:15%;
-  padding-bottom:.25em;
+  width: 15%;
+  padding-bottom: .25em;
 }
 
 #accomplish-input-column {
-  display:flex;
-  flex-direction:column;
+  display: flex;
+  flex-direction: column;
 }
 
 .warning-p {
-  color:#EFB7EC;
-  display:flex;
-  flex-direction:row;
-  align-items:flex-end;
-  margin-top:2%;
-  font-size:1em;
+  color: #EFB7EC;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  margin-top: 2%;
+  font-size: 1em;
 }
 
 .small-warning-p {
-  color:#EFB7EC;
-  display:flex;
-  flex-direction:row;
-  align-items:flex-end;
-  margin-top:5%;
+  color: #EFB7EC;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  margin-top: 5%;
 }
 
 .warning-icon {
-  width:3%;
-  margin-right:1.5%;
+  width: 3%;
+  margin-right: 1.5%;
 }
 
 .small-warning-icon {
-  width:6%;
-  margin-right:3%;
+  width: 6%;
+  margin-right: 3%;
 }
 
 #time-input-row {
-  display:flex;
-  justify-content:space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .time-input-columns {
-  display:flex;
-  flex-direction:column;
-  width:40%;
+  display: flex;
+  flex-direction: column;
+  width: 40%;
 }
 
 .form-input {
-  height:3em;
-  background-color:#46424D;
-  border-bottom:solid 1px;
-  border-top:none;
-  border-right:none;
-  border-left:none;
-  font-size:1em;
-  padding-top:20px;
+  height: 3em;
+  background-color: #46424D;
+  border-bottom: solid 1px;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  font-size: 1em;
+  padding-top: 20px;
 }
 
 #start-activity-button {
-  align-self:flex-end;
-  height:5%;
-  width:25%;
-  border-radius:3px;
-  border:0px;
-  background-color:white;
-  color:#46424D;
+  align-self: flex-end;
+  height: 5%;
+  width: 25%;
+  border-radius: 3px;
+  border: 0px;
+  background-color: white;
+  color: #46424D;
 }
 
 .activity-timer {
-  width:30%;
-  height:100%;
-  margin:0px;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  font-size:1.75em;
+  width: 30%;
+  height: 100%;
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.75em;
 }
 
 #activity-timer > p {
-  margin-bottom:0px;
+  margin-bottom: 0px;
 }
 
 #activity-timer > #time-left {
-  font-size:4em;
-  margin-top:0px;
+  font-size: 4em;
+  margin-top: 0px;
 }
 
 #activity-timer > button {
-  width:27vh;
-  height:27vh;
-  background-color:#46424D;
-  border-style:solid;
-  border-width:4px;
-  color:#FFF;
-  border-radius:100%;
+  width: 27vh;
+  height: 27vh;
+  background-color: #46424D;
+  border-style: solid;
+  border-width: 4px;
+  color: #FFF;
+  border-radius: 100%;
   font-size: 1.3em;
-  margin-top:5vh;
-  margin-bottom:15vh;
+  margin-top: 5vh;
+  margin-bottom: 15vh;
 }
 
 .congratulatory-message {
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  font-size:xx-large;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: xx-large;
 }
 
 .log-activity {
-  height:2em;
-  width:50%;
-  border-radius:3px;
-  border:0px;
-  background-color:white;
-  color:#46424D;
+  height: 2em;
+  width: 50%;
+  border-radius: 3px;
+  border: 0px;
+  background-color: white;
+  color: #46424D;
 }
 
 .hidden {
-  display:none;
+  display: none;
 }
